--- a/index.html
+++ b/index.html
@@ -4,7 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
     <title>Villa-Lobos Étude No. 1 Practice Companion</title>
+    <meta name="title" content="Villa-Lobos Étude No. 1 Practice Companion" />
+    <meta name="description" content="An interactive trainer for the arpeggio pattern of the Étude No. 1 by Heitor Villa-Lobos." />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://villa-lobos-trainer.vercel.app/" />
+    <meta property="og:title" content="Villa-Lobos Étude No. 1 Practice Companion" />
+    <meta property="og:description" content="An interactive trainer for the arpeggio pattern of the Étude No. 1 by Heitor Villa-Lobos." />
+    <meta property="og:image" content="https://villa-lobos-trainer.vercel.app/heitor-villa-lobos.jpg" />
+
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://villa-lobos-trainer.vercel.app/" />
+    <meta property="twitter:title" content="Villa-Lobos Étude No. 1 Practice Companion" />
+    <meta property="twitter:description" content="An interactive trainer for the arpeggio pattern of the Étude No. 1 by Heitor Villa-Lobos." />
+    <meta property="twitter:image" content="https://villa-lobos-trainer.vercel.app/heitor-villa-lobos.jpg" />
   </head>
   <body>
     <div id="app"></div>    
